--- a/index.html
+++ b/index.html
@@ -1,173 +1,18 @@
 <!doctype html>
 <head>
-
-<meta charset="utf8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0">
-
-<title>Fictorial - Software Consultancy</title>
-
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-<link rel=stylesheet href=style.css>
-
+  <meta charset="utf8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0">
+  <title>Fictorial - Full Stack Development Services</title>
 </head>
 <body>
-
-<div id=content>
-
-<h1>Fictorial</h1>
-
-<div id=banner>
-
+  <h1>Fictorial</h1>
   Fictorial is a US-based full-stack software development shop focusing on iOS
-  consulting.  Founded in 2008 and backed by 15+ years of professional software development,
-  Fictorial will work with you to iterate, prototype, refine, and launch your
-  next software title. Get in touch!
-
-</div>
-
-<div id=profile>
-  <img src=me.png>
-  <div id=contact>
-    <div>Brian Hammond</div>
-    <div id=role>CEO of Fictorial</div>
-    <div>+1 914 930 6620</div>
-    <div>brian at fictorial.com</div>
-    <div><a href="https://github.com/Fictorial">GitHub.com/Fictorial</a></div>
-  </div>
-</div>
-
-<ul class=plain id=apps>
-
-  <li class=app>
-    <img class="app-icon plain" src=v360.png width=180>
-    <a class=app-name href="http://www.visuality360.com/">Visuality360</a>
-    <div class=app-about>
-      Visuality360 provides retail chains with a way to direct store layouts and
-      perform visual (photo-based) audits conveniently and easily. Developed
-      for Global Apparel Network, V360 went live (via iOS enterprise distribution)
-      in mid-2014 for American Eagle, Aeropostale, Joe Fresh, and more!
-    </div>
-    <div class=app-tech>iOS, Objective C, UIKit, AVFoundation, AFNetworking, custom backend</div>
-  </li>
-
-  <li class=app>
-    <img class=app-icon src=ffo.png>
-    <a class=app-name href="https://itunes.apple.com/us/app/furry-face-off-pet-photo-contests/id855754905?ls=1&mt=8">Furry Face Off</a>
-    <div class=app-about>
-      Furry Face Off is the ultimate app for those who love to show off their
-      pets. Enter your favorite pet photos in weekly contests!
-      Developed for a family of dog lovers, FFO went live in the App Store in June, 2014.
-      Cartoon artwork by <a href="https://twitter.com/SBToons">S.B.ToOns</a>.
-    </div>
-    <div class=app-tech>iOS, Objective C, UIKit, Parse.com</div>
-  </li>
-
-  <li class=app>
-    <img class=app-icon src=ft.png>
-    <a class=app-name href="https://itunes.apple.com/us/app/fametag-know-your-image-tag/id662918226?ls=1&mt=8">FameTag</a>
-    <div class=app-about>
-      FameTag shows you the words friends use to describe you and what you're
-      famous for. Who at your school is most famous for being stylish, brainy,
-      athletic, flirty, hot, or funny?
-      Developed for BlueWhale Apps, FameTag went live in the App Store in October, 2013
-    </div>
-    <div class=app-tech>iOS, Objective C, UIKit, Parse.com</div>
-  </li>
-
-  <li class=app>
-    <img class="app-icon plain" src=pt.png>
-    <a class=app-name href="https://itunes.apple.com/us/app/picture-that-guess-picture/id556764942?mt=8">Picture That</a>
-    <div class=app-about>
-
-      Picture That is an addictive multiplayer photo guessing game.
-      Developed for Styrofoam Inc., Picture That went live in the App Store in
-      March, 2013.
-
-    </div>
-    <div class=app-tech>iOS, Objective C, UIKit, Parse.com, Heroku, AFNetworking, Ruby</div>
-  </li>
-
-  <li class=app>
-    <img class="app-icon plain" src=chumkee.png width=180>
-    <a class=app-name href="http://chumkee.com/">Chumkee</a>
-    <div class=app-about>
-
-      Chumkee opens a new world of socializing for your iPhone and iPad that
-      transcends language and location through video and photo conversations.
-      Developed for C-Vibes Ltd., version 3.0 of Chumkee launched in the App
-      Store in June, 2012.
-
-    </div>
-    <div class=app-tech>iOS, Objective C, localization, UIKit, AVFoundation, Heroku, Ruby on Rails</div>
-  </li>
-
-  <li class=app>
-    <img class=app-icon src=lexatron.png width=180>
-    <a class=app-name href="./lexatron">Lexatron</a>
-    <div class=app-about>
-
-      Lexatron is a word race. Snake a path from one corner of the board to the
-      other by forming words on the board using only your own letters. The
-      player that reaches the opposite corner first wins the match. If a player
-      gets blocked by his opponent's letters, he can detonate a bomb to clear a
-      path and keep going!  Developed for Fictorial, Lexatron went live in the
-      App Store in October 2012.
-
-    </div>
-    <div class=app-tech>iOS, Objective C, UIKit, Parse.com</div>
-    <a class=app-link href="http://www.youtube.com/watch?v=ZKan2aCR0IU&hd=1">Video</a>
-    <a class=app-link href="./lexatron/rules">How to Play</a>
-  </li>
-
-  <li class=app>
-    <img class=app-icon src=darts.png width=180>
-    <a class=app-name href="http://itunes.com/apps/FictorialLLC/Darts">Darts</a>
-    <div class=app-about>
-
-      Darts is a realistic 3-D darts game for iOS which lets you play cricket, 501,
-      and more! Darts was released in 2008, went #1 on the free charts, and has been
-      downloaded over 6 million times. Developed for Fictorial, Darts went live in the App Store
-      October, 2008.
-
-    </div>
-    <div class=app-tech>iOS, Objective C, OpenGL ES, Cheetah3D, Javascript, Python, Adwhirl, Game Center</div>
-  </li>
-
-  <li class=app>
-    <img class=app-icon src=rps.png width=180>
-    <a class=app-name href="http://itunes.com/apps/FictorialLLC/RPSWorldMastersOnlineRockPaperScissors">RPS World Masters</a>
-    <div class=app-about>
-
-      RPS World Masters is an addictive online-only version of the classic Rock
-      Paper Scissors game. You will be automatically paired with random
-      opponents from anywhere around the world! Developed for Fictorial, RPS World Masters
-      went live in the App Store in January, 2011.
-
-    </div>
-    <div class=app-tech>iOS, Objective C, Cocos2D-iPhone, Game Center</div>
-  </li>
-
-</ul>
-
-</div>
-
-<script src="//cdn.jsdelivr.net/jquery/2.1.1/jquery.min.js"></script>
-
-<script>
-
-$(function () {
-  var index = 0;
-  var roles = [ "CEO of", "CTO of", "COO of", "Lead Developer at", "VP Sales at", "System Administrator at", "Graphic Designer at", "UX Expert at", "iOS Guru at", "Full Stack Developer at", "Chief Code Monkey at", "Resident Hacker at", "Foremost Spline Reticulator of" ];
-  setInterval(function () {
-    var el = document.querySelector('#role');
-    el.innerHTML = roles[index] + " Fictorial";
-    index = (index + 1) % roles.length;
-  }, 3000);
-
-});
-
-</script>
-
-
+  consulting.  Founded in 2008 and backed by 18+ years of professional software development,
+  Fictorial has helped dozens of clients launch iOS apps, games, and backend services.
+  <p/>
+  Fictorial will work with you to iterate, prototype, refine, and launch your next software project.
+  <p/>
+  <strong>brian at fictorial.com</strong>
+  <img src="me.png">
 </body>
 </html>
