--- a/index.html
+++ b/index.html
@@ -3,16 +3,30 @@
   <meta charset="utf8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0">
   <title>Fictorial - Full Stack Development Services</title>
+<style>
+body {
+  margin: 3em auto;
+  max-width: 640px;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+    padding: 0;
+}
+li {
+  margin: 1em 0;
+}
+</style>
 </head>
 <body>
   <h1>Fictorial</h1>
-  Fictorial is a US-based full-stack software development shop focusing on iOS
-  consulting.  Founded in 2008 and backed by 18+ years of professional software development,
-  Fictorial has helped dozens of clients launch iOS apps, games, and backend services.
-  <p/>
-  Fictorial will work with you to iterate, prototype, refine, and launch your next software project.
-  <p/>
-  <strong>brian at fictorial.com</strong>
+  <ul>
+    <li>US-based full-stack software development shop founded in 2008
+    <li>Primary focus has been iOS apps, games, and backend support (APIs, databases)
+    <li>Helped launch dozens of iOS apps with many clients
+    <li>Fictorial works <i>with you</i> to ideate, iterate, prototype, refine, and launch your next software project
+    <li>Get in touch! <strong>brian at fictorial.com</strong>
+  </ul>
   <img src="me.png">
 </body>
 </html>
