--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ ul {
 li {
   margin: 1em 0;
 }
+a {
+  text-decoration: none;
+  font-weight: bold
+}
 </style>
 </head>
 <body>
@@ -26,6 +30,7 @@ li {
     <li>Helped launch dozens of iOS apps with many clients
     <li>Fictorial works <i>with you</i> to ideate, iterate, prototype, refine, and launch your next software project
     <li>Get in touch! <strong>brian at fictorial.com</strong>
+    <li><a href="https://github.com/fictorial">GitHub</a>
   </ul>
   <img src="me.png">
 </body>
